--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/db
-spring.datasource.username = root
-spring.datasource.password = secret
+spring.datasource.url = jdbc:mysql://124.82.157.242:3306/db
+spring.datasource.username = admin
+spring.datasource.password = admin
 
 
 ## Hibernate Properties
