--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://124.82.157.242:3306/db
+spring.datasource.url = jdbc:mysql://issue-tracker.cgkbimjm3sun.ap-southeast-1.rds.amazonaws.com:3306/db
 spring.datasource.username = admin
-spring.datasource.password = admin
+spring.datasource.password = nopassword
 
 
 ## Hibernate Properties
