--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -1,9 +1,14 @@
 version: "3.9"
 services:
+    spring-app:
+        build: .
+        ports:
+            - 8080:8080
+        depends_on: 
+            - sql-server
+        restart: on-failure
     sql-server:
         image: mysql:latest
-        networks:
-            - mysql-network
         environment:
             - MYSQL_ROOT_PASSWORD=secret
         ports:
@@ -11,6 +16,3 @@ services:
         volumes:
             - ./User.sql:/docker-entrypoint-initdb.d/User.sql
 
-networks:
-    mysql-network:
-        driver: bridge
