--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.properties.hibernate.show_sql = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+demo.accessTokenName = cookie1
+demo.refreshTokenName = cookie2
+demo.jwtExpirationInMs = 60000
+demo.refreshTokenExpirationInMs= 36000
