Return user object in AuthenticateResponse

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 demo.accessTokenName = cookie1
 demo.refreshTokenName = cookie2
-demo.jwtExpirationInMs = 60000
-demo.refreshTokenExpirationInMs= 36000
+demo.jwtExpirationInMs = 6000000
+demo.refreshTokenExpirationInMs= 6000000
