--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.show_sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
+demo.secretKey = secret
 demo.accessTokenName = cookie1
 demo.refreshTokenName = cookie2
 demo.jwtExpirationInMs = 6000000
