--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/db
+spring.datasource.url = jdbc:mysql://sql-server/db
 spring.datasource.username = root
 spring.datasource.password = secret
 
