--- a/demo/src/test/resources/application.properties
+++ b/demo/src/test/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.generate-ddl = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+logging.level.com.example.demo= TRACE
+
+demo.secretKey = secret
+demo.jwtCookieName = cookie1
+# Valid for 24 hours
+demo.jwtExpirationInMs = 86400000
