set cookie domain in nginx conf file

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,11 @@
 upstream backend {
     server spring-app:8080;
 }
+
+upstream frontend {
+    server frontend-app:8081;
+}
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -36,6 +41,10 @@ server {
 
     location /api {
         proxy_pass http://backend$uri;
+	proxy_cookie_domain localhost $host;
+        proxy_set_header X-ForwardedFor $remote_addr;
+	proxy_set_header Host $http_host;
+	# proxy_cookie_path / "/; HTTPOnly; SameSite=Lax";
     }
 
     # pass PHP scripts to FastCGI server
