--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -16,3 +16,5 @@ demo.secretKey = secret
 demo.jwtCookieName = cookie1
 # Valid for 24 hours
 demo.jwtExpirationInMs = 86400000
+
+spring.jpa.properties.hibernate.search.backend.analysis.configurer=com.example.demo.controllers.AnalysisConfigurer
