--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/db
 spring.datasource.username = root
-spring.datasource.password = secret
-
+spring.datasource.password = admin
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -11,10 +10,11 @@ spring.jpa.properties.hibernate.show_sql = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.search.backend.analysis.configurer = com.example.demo.config.AnalysisConfigurer
+spring.jpa.properties.hibernate.search.backend.directory.root = demo/index
+spring.jpa.properties.hibernate.search.backend.lucene_version = 8.7.0
 
 demo.secretKey = secret
 demo.jwtCookieName = cookie1
 # Valid for 24 hours
 demo.jwtExpirationInMs = 86400000
-
-spring.jpa.properties.hibernate.search.backend.analysis.configurer=com.example.demo.controllers.AnalysisConfigurer
