--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>hibernate-search-backend-lucene</artifactId>
             <version>6.0.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
