--- a/demo/src/test/resources/application.properties
+++ b/demo/src/test/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.generate-ddl = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.search.backend.analysis.configurer = com.example.demo.config.AnalysisConfigurer
+spring.jpa.properties.hibernate.search.backend.directory.root = demo/index
+spring.jpa.properties.hibernate.search.backend.lucene_version = 8.7.0
 
 logging.level.com.example.demo= TRACE
 
