edit nginx configuration

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -40,7 +40,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://backend$uri;
+        proxy_pass http://backend;
 	proxy_cookie_domain localhost $host;
         proxy_set_header X-ForwardedFor $remote_addr;
 	proxy_set_header Host $http_host;
