--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         environment:
             - MYSQL_ROOT_PASSWORD=secret
             - MYSQL_DATABASE=db
+        command: --lower_case_table_names=1
         ports:
             - 3306:3306
     frontend-app:
