--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -131,6 +131,11 @@
             <version>2.3.0</version>
         </dependency>
                 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
 </dependencies>
 	<repositories>
         <repository>
