--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/extension-highlight": "^2.0.0-beta.13",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.21",
+    "@tiptap/extension-underline": "^2.0.0-beta.14",
+    "@tiptap/starter-kit": "^2.0.0-beta.70",
+    "@tiptap/vue-2": "^2.0.0-beta.34",
     "core-js": "^3.6.5",
     "highcharts": "^9.1.0",
     "highcharts-vue": "^1.4.0",
