--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -40,11 +40,17 @@ server {
     }
 
     location /api {
+	client_max_body_size 100M;
         proxy_pass http://backend;
 	proxy_cookie_domain localhost $host;
         proxy_set_header X-ForwardedFor $remote_addr;
 	proxy_set_header Host $http_host;
 	# proxy_cookie_path / "/; HTTPOnly; SameSite=Lax";
+    }
+
+    location /image {
+	root /var/www/static;
+	try_files $uri $uri/ =404;
     }
 
     # pass PHP scripts to FastCGI server
