--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/db
 spring.datasource.username = root
 spring.datasource.password = secret
+spring.datasource.initialization-mode=always
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -16,7 +17,6 @@ spring.jpa.properties.hibernate.search.backend.directory.root = demo/index
 spring.jpa.properties.hibernate.search.backend.lucene_version = 8.7.0
 
 spring.servlet.multipart.max-file-size = 10MB
-
 
 demo.secretKey = secret
 demo.jwtCookieName = cookie1
