Change date to timestamp

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.generate-ddl = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.search.backend.analysis.configurer = com.example.demo.config.AnalysisConfigurer
 spring.jpa.properties.hibernate.search.backend.directory.root = demo/index
 spring.jpa.properties.hibernate.search.backend.lucene_version = 8.7.0
