disable database init in test properties

--- a/demo/src/test/resources/application.properties
+++ b/demo/src/test/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.datasource.initialization-mode=never
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
