--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
         command: --lower_case_table_names=1
         ports:
             - 3306:3306
+        volumes:
+            - /var/db:/var/lib/mysql
     frontend-app:
         build: ./frontend/
         ports:
