implement markdown and fix some bugs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "highcharts": "^9.1.0",
     "highcharts-vue": "^1.4.0",
+    "showdown": "^1.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.0",
