--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/db
 spring.datasource.username = root
 spring.datasource.password = secret
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode = never
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -11,14 +11,14 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.generate-ddl = true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.search.backend.analysis.configurer = com.example.demo.config.AnalysisConfigurer
 spring.jpa.properties.hibernate.search.backend.directory.root = demo/index
 spring.jpa.properties.hibernate.search.backend.lucene_version = 8.7.0
 
-spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-file-size = 100MB
 
 demo.secretKey = secret
 demo.jwtCookieName = cookie1
-# Valid for 24 hours
-demo.jwtExpirationInMs = 86400000
+# Valid for 8 hours
+demo.jwtExpirationInMs = 28800
