Register endpoint access control

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/db
 spring.datasource.username = root
-spring.datasource.password = secret
+spring.datasource.password = admin
 spring.datasource.initialization-mode = never
 
 ## Hibernate Properties
@@ -21,4 +21,4 @@ spring.servlet.multipart.max-file-size = 100MB
 demo.secretKey = secret
 demo.jwtCookieName = cookie1
 # Valid for 8 hours
-demo.jwtExpirationInMs = 28800
+demo.jwtExpirationInMs = 28800000
