--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,31 +26,15 @@ server {
     #
     # include snippets/snakeoil.conf;
 
-    root /var/www/html;
-
-    # Add index.php to the list if you are using PHP
-    index index.html index.htm index.nginx-debian.html;
-
-    server_name _;
+    server_name bugslife.ga www.bugslife.ga;
 
     location / {
-        # First attempt to serve request as file, then
-        # as directory, then fall back to displaying a 404.
-        try_files $uri $uri/ /index.html =404;
+        return 301 https://$host$request_uri;
     }
 
-    location /api {
-	client_max_body_size 100M;
-        proxy_pass http://backend;
-	proxy_cookie_domain localhost $host;
-        proxy_set_header X-ForwardedFor $remote_addr;
-	proxy_set_header Host $http_host;
-	# proxy_cookie_path / "/; HTTPOnly; SameSite=Lax";
-    }
-
-    location /image {
-	root /var/www/static;
-	try_files $uri $uri/ =404;
+    location ^~ /.well-known/acme-challenge/ {
+        default_type "text/plain";
+        root /var/www/letsencrypt;
     }
 
     # pass PHP scripts to FastCGI server
@@ -70,4 +54,39 @@ server {
     #location ~ /\.ht {
     #       deny all;
     #}
+}
+
+server {
+    listen 443 ssl;
+
+    ssl_certificate /etc/letsencrypt/live/bugslife.ga/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bugslife.ga/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+
+    server_name bugslife.ga www.bugslife.ga;
+
+    root /var/www/html;
+
+    # Add index.php to the list if you are using PHP
+    index index.html index.htm index.nginx-debian.html;
+
+    location / {
+        # First attempt to serve request as file, then
+        # as directory, then fall back to displaying a 404.
+        try_files $uri $uri/ /index.html =404;
+    }
+
+    location /api {
+	    client_max_body_size 100M;
+        proxy_pass http://backend;
+	    proxy_cookie_domain localhost $host;
+        proxy_set_header X-ForwardedFor $remote_addr;
+	    proxy_set_header Host $http_host;
+	    proxy_cookie_path / "/; HTTPOnly; secure";
+    }
+
+    location /image {
+	    root /var/www/static;
+	    try_files $uri $uri/ =404;
+    }
 }
