--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/db
 spring.datasource.username = root
-spring.datasource.password = admin
-spring.datasource.initialization-mode = never
+spring.datasource.password = secret
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
