--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "highcharts": "^9.1.0",
     "highcharts-vue": "^1.4.0",
+    "register-service-worker": "^1.7.1",
     "showdown": "^1.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.13",
     "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-plugin-vuex": "^4.5.13",
     "@vue/cli-service": "~4.5.0",
